--- a/theorems/templates/theorems/index.html
+++ b/theorems/templates/theorems/index.html
@@ -76,7 +76,7 @@
                    <li><a href="{% url 'theorems:subjects' %}">Subjects</a></li>
                    <li> <a href="{% url 'theorems:definitions' %}">Definitions</a></li>
                    <li> <a href="{% url 'theorems:theorems' %}">Theorems</a></li>
-                   <li> <a href="{% url 'theorems:questions' %}">Questions</a></li>
+                   <li> <a href="{% url 'theorems:questions' page_num=1 %}">Questions</a></li>
                 </ul>
             </div> <!-- navbar -->
         </nav>
