--- a/theorems/templates/theorems/subject_theorems.html
+++ b/theorems/templates/theorems/subject_theorems.html
@@ -78,7 +78,7 @@
                    <li class='active'><a href='{% url 'theorems:subjects' %}'>Subjects</a></li>
                    <li> <a href='{% url 'theorems:definitions' %}'>Definitions</a></li>
                    <li> <a href='{% url 'theorems:theorems' %}'>Theorems</a></li>
-                   <li> <a href='{% url 'theorems:questions' %}'>Questions</a></li>
+                   <li> <a href='{% url 'theorems:questions' page_num=1 %}'>Questions</a></li>
                 </ul>
             </div> <!-- navbar -->
         </nav>
