--- a/theorems/templates/theorems/theorem_proof.html
+++ b/theorems/templates/theorems/theorem_proof.html
@@ -76,7 +76,7 @@
                    <li><a href='{% url 'theorems:subjects' %}'>Subjects</a></li>
                    <li> <a href='{% url 'theorems:definitions' %}'>Definitions</a></li>
                    <li class='active'> <a href='{% url 'theorems:theorems' %}'>Theorems</a></li>
-                   <li> <a href='{% url 'theorems:questions'  %}'>Questions</a></li>
+                   <li> <a href='{% url 'theorems:questions' page_num=1 %}'>Questions</a></li>
                 </ul>
             </div> <!-- navbar -->
         </nav>
@@ -117,19 +117,26 @@
                 {% endfor %}
                 
                 {% endif %}
-	        <ul class='pagination'>
+		<div class="row">
+		  <div class="col-xs-7" style="margin-top:.5em;">
+		    Showing {{proofs.start_index}} to {{proofs.end_index}} of {{proofs.paginator.count}}
+		  </div>
+		  <div class="col-xs-5 text-right">
+	            <ul class='pagination'>
                 {% if proofs.has_previous %}
-                    <li><a href="{% url 'theorems:theorem_proof' theorem_id proofs.previous_page_number %}">Previous</a></li>
+                      <li><a href="{% url 'theorems:theorem_proof' theorem_id proofs.previous_page_number %}">Previous</a></li>
 		{% else %}
-		    <li class="disabled"><a href="#">Previous</a></li>
+		      <li class="disabled"><a href="#">Previous</a></li>
                 {% endif %}                  
 
                 {% if proofs.has_next %}
-                    <li><a href="{% url 'theorems:theorem_proof' theorem_id proofs.next_page_number %}">Next</a></li>
+                      <li><a href="{% url 'theorems:theorem_proof' theorem_id proofs.next_page_number %}">Next</a></li>
 		{% else %}
-		    <li class="disabled"><a href="#">Next</a></li>    
+		      <li class="disabled"><a href="#">Next</a></li>    
 	        {% endif %}
-                </ul>
+                    </ul>
+		  </div>
+		</div> <!-- div.row -->
             </main>
         </div> <!-- div.wrapper -->
         <footer>
