--- a/theorems/templates/theorems/subject_definitions.html
+++ b/theorems/templates/theorems/subject_definitions.html
@@ -1,4 +1,5 @@
 {% load theorems_extra %}
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,34 +34,12 @@
             }
         });
     </script>
-	{% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.3.1/markdown-it.min.js"></script>
     <script src="{% static 'theorems/marked/marked.min.js' %}"></script>
-    <script>
-      $(document).ready(function(){
-          marked.setOptions({
-            renderer: new marked.Renderer(),
-            gfm: true,
-            tables: true,
-            breaks: true,
-            pedantic: false,
-            sanitize: true,
-            smartLists: true,
-            smartypants: false
-        });
-        $(".markdown").each(function(){
-            var renderedHtml = marked($(this).text());
-            $(this).html(renderedHtml);
-            console.log(renderedHtml);
-        });
-      
-        MathJax.Hub.Configured();  //this must be called to start mathjax rendering
-      });
-    </script>
+    <script src="{% static 'thoerems/javascripts.js' %}"></script>
     <link rel='stylesheet' href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css"/>
     <link rel='stylesheet' href='{% static "theorems/style.css" %}' />
 </head>
