--- a/theorems/templates/theorems/index.html
+++ b/theorems/templates/theorems/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="{% static 'theorems/marked/marked.min.js' %}"></script>
-    <script src="{% static 'thoerems/javascripts.js' %}"></script>
+    <script src="{% static 'theorems/javascripts.js' %}"></script>
     <link rel='stylesheet' href='{% static "theorems/style.css" %}' />
 </head>
 <body class='homepage'>
