--- a/theorems/templates/theorems/subjects.html
+++ b/theorems/templates/theorems/subjects.html
@@ -39,7 +39,7 @@
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script src="{% static 'theorems/marked/marked.min.js' %}"></script>
-    <script src="{% static 'thoerems/javascripts.js' %}"></script>
+    <script src="{% static 'theorems/javascripts.js' %}"></script>
     <link rel='stylesheet' href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css"/>
     <link rel='stylesheet' href='{% static "theorems/style.css" %}' />
 </head>
