minor format changes to tables and html page titles

--- a/theorems/templates/theorems/definitions.html
+++ b/theorems/templates/theorems/definitions.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset='utf-8' />
     <meta name='viewport' content='width=device-width,initial-scale=1' />
-    <title>index</title>
+    <title>Definitions</title>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_SVG'&delayStartupUntil=configured'> <!-- delay start until markdown is processed -->
         MathJax.Hub.Config({
@@ -69,7 +69,7 @@
             <main>
                 {% if definitions %}
                 <h3 class='center'>Definitions</h3>
-                <table id="defTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <table id="defTable" class="longtable table table-striped table-bordered" cellspacing="0" width="100%">
                   <thead>
                     <tr>
                       <th>Term</th>
