--- a/theorems/templates/theorems/questions.html
+++ b/theorems/templates/theorems/questions.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
-    <title>index</title>
+    <title>Questions</title>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_SVG'&delayStartupUntil=configured'> <!-- delay start until markdown is processed -->
         MathJax.Hub.Config({
@@ -89,10 +89,10 @@
 	      <div class="well well-lg">There are no questions today, try again later</div>
 	      {% endif %}
 	      <div class='row'>
-		<div class='col-xs-7'>
+		<div class='col-xs-4'>
                   Showing {{ questions.start_index }} to {{questions.end_index}} of {{questions.paginator.count}}
 		</div>
-		<div class="col-xs-5 text-right">
+		<div class="col-xs-8 text-right">
 	      <ul class="pagination">
 		  {% if questions.has_previous %}
 		  <li><a href="{% url 'theorems:questions' questions.previous_page_number %}">previous</a></li>
@@ -106,7 +106,7 @@
 		  <li class="disabled"><a href="#">next</a></li>
                   {% endif %}
               </ul>
-	        </div> <!-- clol-xs-5-->
+	        </div> <!-- clol-xs-8-->
 	      </div> <!-- div.row -->
             </main>
         </div> <!-- div.wrapper -->
