--- a/theorems/templates/theorems/subject_definitions.html
+++ b/theorems/templates/theorems/subject_definitions.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
-    <title>{{ subject_name }} Definitions </title>
+    <title>{% if subject_name %} {{ subject_name }} {% endif %} Definitions</title>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_SVG'&delayStartupUntil=configured'> <!-- delay start until markdown is processed -->
         MathJax.Hub.Config({
