--- a/theorems/templates/theorems/subject_theorems.html
+++ b/theorems/templates/theorems/subject_theorems.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
-    <title>index</title>
+    <title>{% if subject_name %} {{ subject_name }} {% endif %} Theorems</title>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_SVG'&delayStartupUntil=configured'> <!-- delay start until markdown is processed -->
         MathJax.Hub.Config({
@@ -67,7 +67,7 @@
         <div class='wrapper'>
             <main>
                 <h3 class='center'>{% if subject_name %} {{ subject_name }} {% endif %} Theorems</h3>
-                <table id="thrmTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <table id="thrmTable" class="longtable table table-striped table-bordered" cellspacing="0" width="100%">
 		<thead>
 		  <tr>
 		    <th>theorem</th>
