--- a/theorems/templates/theorems/questions.html
+++ b/theorems/templates/theorems/questions.html
@@ -89,10 +89,10 @@
 	      <div class="well well-lg">There are no questions today, try again later</div>
 	      {% endif %}
 	      <div class='row'>
-		<div class='col-xs-4'>
+		<div class="col-sm-7">
                   Showing {{ questions.start_index }} to {{questions.end_index}} of {{questions.paginator.count}}
 		</div>
-		<div class="col-xs-8 text-right">
+		<div class="col-sm-5 text-right">
 	      <ul class="pagination">
 		  {% if questions.has_previous %}
 		  <li><a href="{% url 'theorems:questions' questions.previous_page_number %}">previous</a></li>
@@ -106,7 +106,7 @@
 		  <li class="disabled"><a href="#">next</a></li>
                   {% endif %}
               </ul>
-	        </div> <!-- clol-xs-8-->
+	        </div> <!-- col-sm-5-->
 	      </div> <!-- div.row -->
             </main>
         </div> <!-- div.wrapper -->
