--- a/theorems/templates/theorems/subject_theorems.html
+++ b/theorems/templates/theorems/subject_theorems.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <title>{% if subject_name %} {{ subject_name }} {% endif %} Theorems</title>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_SVG'&delayStartupUntil=configured'> <!-- delay start until markdown is processed -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_SVG&delayStartupUntil=configured'> <!-- delay start until markdown is processed -->
         MathJax.Hub.Config({
             extensions: ["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],
             jax: ["input/TeX", "output/SVG"],
@@ -42,7 +42,7 @@
     <link rel='stylesheet' href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css"/>
     <link rel='stylesheet' href='{% static "theorems/style.css" %}' />
 </head>
-<body class='homepage'>
+<body class='homepage' onresize="headerfooter()">
     <div class='container-fluid'>
         <nav class='navbar navbar-inverse'>
             <div class="navbar-header">
@@ -62,7 +62,7 @@
             </div> <!-- navbar -->
         </nav>
         <header>
-            Math Review
+            <canvas id='header' width='200px' height='200px'>Math Review</canvas>
         </header>
         <div class='wrapper'>
             <main>
@@ -103,9 +103,27 @@
             </main>
         </div> <!-- div.wrapper -->
         <footer>
-            Footer
+          <canvas id="footCanvas" height="200px" width="200px"></canvas>
+	  <canvas id="footCanvas2" height="200px" width="200px"></canvas>
         </footer>
     </div> <!-- div.container -->
+    <div style='display:none;'>
+      <img src="{% static 'theorems/images/img0.png' %}" />
+      <img src="{% static 'theorems/images/img1.png' %}" />
+      <img src="{% static 'theorems/images/img2.png' %}" />
+      <img src="{% static 'theorems/images/img3.png' %}" />
+      <img src="{% static 'theorems/images/img4.png' %}" />
+      <img src="{% static 'theorems/images/img5.png' %}" />
+      <img src="{% static 'theorems/images/img6.png' %}" />
+      <img src="{% static 'theorems/images/img7.png' %}" />
+      <img src="{% static 'theorems/images/img8.png' %}" />
+      <img src="{% static 'theorems/images/img9.png' %}" />
+      <img src="{% static 'theorems/images/img10.png' %}" />
+      <img src="{% static 'theorems/images/img11.png' %}" />
+      <img src="{% static 'theorems/images/img12.png' %}" />
+      <img src="{% static 'theorems/images/img13.png' %}" />
+      <img src="{% static 'theorems/images/img14.png' %}" />
+    </div>
     <script>
     $(document).ready(function() {
         $('#thrmTable').DataTable({
