--- a/theorems/templates/theorems/questions.html
+++ b/theorems/templates/theorems/questions.html
@@ -52,9 +52,9 @@
                 <ul class="nav navbar-nav">
                    <li><a href='{% url 'theorems:index' %}'><span class='glyphicon glyphicon-home'></span></a></li>
                    <li><a href='{% url 'theorems:subjects' %}'>Subjects</a></li>
-                   <li class='active'> <a href='{% url 'theorems:definitions' %}'>Definitions</a></li>
-                   <li> <a href='{% url 'theorems:theorems' %}'>Theorems</a></li>
-                   <li> <a href='{% url 'theorems:questions' page_num=1 %}'>Questions</a></li>
+                   <li><a href='{% url 'theorems:definitions' %}'>Definitions</a></li>
+                   <li><a href='{% url 'theorems:theorems' %}'>Theorems</a></li>
+                   <li class='active'><a href='{% url 'theorems:questions' page_num=1 %}'>Questions</a></li>
                 </ul>
             </div> <!-- navbar -->
         </nav>
